styled with bootstrap

--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
     <title>MERN - Hashnode</title>
     <meta name="description" content="MERN tutorial on Hashnode">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 
     <style>
       th, td {
@@ -13,6 +14,13 @@
       }
       table {
         border-collapse: collapse;
+      }
+      body {
+        max-width: 800px;
+        margin: 0 auto;
+      }
+      h1 {
+        text-align: center;
       }
     </style>
 </head>
